# nexus

./: .crush.json  .env.example  .gitignore  ALLINEAMENTO_RACCONTO_2025.md  ALL_NPC_NOTECARD_SYSTEM.md  ANSWER_VERIFICATION_QUESTION.md  ANTEFATTO.txt  ANTEFATTO_FOR_NPCS_IMPLEMENTATION.md  ARCHITETTURA_NARRATIVA_COMPLETA.md  BVH_IMPORT_TROUBLESHOOTING_GUIDE.md  CLAUDE.md  COMMIT_ANALYSIS.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTEXT_FLOW_DOCUMENTATION.md  CRUSH.md  DEBUG_NOTECARD_LSL.md  DEPLOYMENT.md  ERASMUS_TUTORIAL_GUIDE.md  FINAL_SUMMARY.txt  GENERATION_GUIDE.md  GUIDA_RAPIDA_SISTEMA.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_8KB_BUDGET.md  IMPROVEMENTS.md  Il velo infrantolastoriaultima.docx  Il velo infrantolastoriaultima_.md  LORENZA_FEEDBACK_ANALYSIS.md  LORENZA_ISSUES_STATUS.md  LSL_REFACTORING_SUMMARY.md  LSL_TEXT_FORMATTING_GUIDE.md  Location.ancient_ruins.txt  Location.city.txt  Location.forest.txt  Location.liminal_void.txt  Location.mountain.txt  Location.nexus_of_paths.txt  Location.rovine_antiche.txt  Location.sanctum_of_whispers.txt  Location.tavern.txt  Location.village.txt  (+207 more)
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
command_handlers/: __init__.py  handle_all_stats.py  handle_areas.py  handle_brief.py  handle_clear.py  handle_describe.py  handle_endhint.py  handle_exit.py  handle_give.py  handle_go.py  handle_help.py  handle_hint.py  handle_history.py  handle_inventory.py  handle_listareas.py  handle_npcs.py  handle_profile.py  handle_receive.py  handle_session_stats.py  handle_stats.py  handle_sussurri.py  handle_talk.py  handle_whereami.py  handle_who.py  heandle_profile_for_npc.py
database/NPCs/: anqar.baruch.json  anqar.elira.json  anqar.syra.json  caelus.boros.json  caelus.captainhox.json  caelus.jorin.json  city.cassian.json  city.irenna.json  forest.elira.json  mountain.boros.json  oceana.astra.json  oceana.cassian.json  oceana.mara.json  ruins.syra.json  tavern.jorin.json  tyrranor.garin.json  village.garin.json  (+3 more)
(+28 files in other folders)
